src/test/contracts/negative/interpreter_tests/test_run_types2.jsligo
const foo = (x:  {b:int}):  {b:int} => {return x};
const bar = Test.run_exn(foo, "toto");
